--- a/config/index.html
+++ b/config/index.html
@@ -25,7 +25,7 @@
       <div class='item-container-content'>
         <label class='item'>
           Background Color
-          <input id='background_color_picker' type='text' class='item-color item-color-sunny' value='#000000'>
+          <input id='background_color_picker' type='text' class='item-color item-color-normal' value='#FF0000'>
         </label>
       </div>
       <div class='item-container-footer'>
@@ -38,7 +38,7 @@
       <div class='item-container-content'>
         <label class='item'>
           Foreground Color
-          <input id='foreground_color_picker' type='text' class='item-color item-color-sunny' value='#000000'>
+          <input id='foreground_color_picker' type='text' class='item-color item-color-normal' value='#000000'>
         </label>
       </div>
       <div class='item-container-footer'>
